Update code block

--- a/source/_posts/為過去幾年與疾病的奮鬥做紀錄.md
+++ b/source/_posts/為過去幾年與疾病的奮鬥做紀錄.md
@@ -1,6 +1,6 @@
 ---
 title: 為過去幾年與疾病的奮鬥做紀錄
-tags: []
+tags: ['恐慌症', '奮鬥']
 date: 2017-04-29 17:40:12
 ---
 
@@ -18,7 +18,9 @@ date: 2017-04-29 17:40:12
 
 過了幾天上帝感動我去看醫生，去看精神科，雖然我很猶豫，還是下定了決心，就在網路上找了診所，就去看了。想說，就去問問看，找不出病因就算了，如果能夠找出來那就太好了。那天跟醫生談了好久(對不起後面排隊看診的人)，從我的家庭、人際關係一直到發病那天的狀況，跟這兩年來的病況，然後到飛機上的經歷。從種種跡象來看，醫生表示我得了恐慌症。
 
-> 恐慌症的特徵是自發性的（SPONTANEOUS ATTACK）恐慌發作（PANIC ATTACK），主要症狀是在事先毫無預警情況下，突然發生極度的恐懼、害怕和不適感，同時伴隨著心悸、大汗、顫抖、呼吸急促或窒息的感覺、胸痛或胸部不適、噁心或腹部不適、頭昏或頭重腳輕、自我感喪失、脫離現實、怕自己失去控制或發瘋、恐懼即將要死去、感覺異常、潮濕或發冷等症狀。在精神科的診斷手冊中至少要有上列四個或更多的症狀，而且反覆發作，並與外界環境中的刺激等因素無關，以及最少需要發作兩次以上才能確定診斷。
+{% blockquote %}
+恐慌症的特徵是自發性的（SPONTANEOUS ATTACK）恐慌發作（PANIC ATTACK），主要症狀是在事先毫無預警情況下，突然發生極度的恐懼、害怕和不適感，同時伴隨著心悸、大汗、顫抖、呼吸急促或窒息的感覺、胸痛或胸部不適、噁心或腹部不適、頭昏或頭重腳輕、自我感喪失、脫離現實、怕自己失去控制或發瘋、恐懼即將要死去、感覺異常、潮濕或發冷等症狀。在精神科的診斷手冊中至少要有上列四個或更多的症狀，而且反覆發作，並與外界環境中的刺激等因素無關，以及最少需要發作兩次以上才能確定診斷。
+{% endblockquote %}
 
 上面完整的描述了我兩年來的所有經歷，每一個症狀我都有，包含脫離現實、怕自己失去控制或發瘋。於是踏出診間的那一刻我就知道，找到病因了，終於找到病因了，我跑去診所廁所偷偷留下了感動的淚水，開心是大於難過的，我終於知道我的身體怎麼了。
 
