--- a/source/_drafts/面對一個判決，我們可以怎樣思考.md
+++ b/source/_drafts/面對一個判決，我們可以怎樣思考.md
@@ -5,3 +5,21 @@ tags:
 
 ##
 {% iframe "https://www.facebook.com/plugins/video.php?href=https%3A%2F%2Fwww.facebook.com%2Ftvbsfb%2Fvideos%2F10154384375875933%2F&show_text=0&width=560" 560 315 %}
+影片中游小姐表示她是綠燈通過路口，被對方闖紅燈撞上後死亡。法官判游小姐過失傷害，拘役五十天，得易科罰金。
+
+#### 看到以上這則新聞，你的感想如何？
+ 1. 恐龍法官，不食人間煙火
+ 2. 到底為什麼會這樣判（想知道法官到底在想什麼，但不想深究）
+ 3. 這判決跟我的認知相去甚遠，我想了解為什麼會這樣判，背後的原因是什麼
+
+
+先說，對於以上所有的感想我覺得都沒有對錯，只是階段的問題。身為一個公民，我們當然可以評論這些可受公評之事，只是，你想了解到什麼地步。
+
+#### 有什麼選擇？
+ 1. 我們可以罵一罵法官，喊聲司法已死，然後轉身離開。 -> 前進選項3
+ 2. 站在法官的立場思考，揣摩法官的想法。 -> 前進選項4
+ 3. 停止思考了，就停在這裡吧。
+ 4. 為什麼法官這樣判？ 是不是法律就是這樣訂定的？
+    - 什麼爛法律 -> 前進選項3
+    - 為什麼法律要這樣訂？ -> 前進選項5
+ 5. 為什麼當初法律要這樣訂？ 有什麼考量嗎？
