--- a/source/_drafts/前端效能調校.md
+++ b/source/_drafts/前端效能調校.md
@@ -1,5 +1,20 @@
 ---
 title: 前端效能調校
-tags: ['效能]
+tags: ['效能']
 keywords: 前端,效能,動畫,animation,performance,front-end
 ---
+
+其實精確一點，這篇文章想討論的是 Rendering Performance，也就是網頁在跟使用者互動的過程中，要怎麼樣才能有流暢的體驗（從工程師角度）。尤其手機的處理能力比較弱，要在受限制的環境展現良好的使用者體驗又更是個挑戰。
+
+我們先看看在這方面表現優秀的網站 [Google I/O 2015](https://events.google.com/io2015/)，在右上角（手機開啟的話是在左上角）的 Navigation 按按切換玩玩看，你可以發現網站的動畫相當的流暢。網頁內容也都可以點點按按，整個表現都相當不錯。
+
+要達到流暢的網頁使用者體驗，其實是有些技巧的，但要學習這些技巧之前，我們需要先了解瀏覽器是怎麼 Rendering 的。
+
+### Pixel Pipline
+<img alt="Pixel Pipline Stage" src=https://developers.google.com/web/fundamentals/performance/rendering/images/intro/frame-full.jpg style="max-width: 700px;" width="100%" />
+=== **請把這張圖記在心裡、請把這張圖記在心裡、請把這張圖記在心裡** == 因為超重要 ====
+
+**Pixel to Screen** 會照順序經過五個階段：
+ - JavaScript, 這個階段就是你用 JS 去對畫面做出視覺改變，舉凡增減元素、使用 jQuery 的 `animate` 或是排序你的資料都是。因為他們最終都會對視覺做出改變。
+
+ - Style, 在這個階段瀏覽器會判斷 CSS 的 rules 根據 selector 必須要提交到哪些元素。 我們的 CSS 可能會寫 `.header`, `.header > .items` 之類的階層，哪些元素會被哪些規則影響，有什麼樣的 style，就是在這個階段決定。
